# SlimenanoProjects

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING
Engine/: CMakeLists.txt  Engine.h  Entrypoint.h  SlimenanoEngine.h
Engine/Asset/: CMakeLists.txt
Engine/Audio/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Application/: IApplication.cpp  IApplication.h
Engine/Core/Base/: BaseApplication.h  CMakeLists.txt  Engine.cpp  Engine.h  EngineContext.h  Export.h  IApplication.h  Status.h  Types.h
Engine/Core/Engine/: Engine.cpp  Engine.h  EngineContext.cpp  EngineContext.h
Engine/Core/Exception/: IExceptionHandler.cpp  IExceptionHandler.h
Engine/Core/Log/: ILogger.h  ILoggerManager.cpp  ILoggerManager.h
Engine/Core/Memory/: CMakeLists.txt  IAllocator.h  IMemoryAllocator.h  IMemoryManager.cpp  IMemoryManager.h  Memory.cpp  Memory.h
Engine/Core/Module/: IBaseModule.h  IModule.h
Engine/Core/Provider/: CMakeLists.txt  IProvider.h  ProviderManager.cpp  ProviderManager.h
Engine/Renderer/: CMakeLists.txt
Engine/Runtime/: CMakeLists.txt
Engine/Scripting/: CMakeLists.txt
Engine/SlimenanoEngine/Asset/: CMakeLists.txt  Export.h  LibMain.cpp
Engine/SlimenanoEngine/Audio/: CMakeLists.txt  Export.h  LibMain.cpp
Engine/SlimenanoEngine/Core/: CMakeLists.txt  Export.h
Engine/SlimenanoEngine/Core/Application/: IApplication.cpp  IApplication.h
Engine/SlimenanoEngine/Core/Base/: Export.h  Result.h  Status.h  Types.h  TypesImpl.h
Engine/SlimenanoEngine/Core/Engine/: Engine.cpp  Engine.h  EngineContext.cpp  EngineContext.h
Engine/SlimenanoEngine/Core/Exception/: IExceptionHandler.cpp  IExceptionHandler.h
Engine/SlimenanoEngine/Core/Log/: ILogger.h  ILoggerManager.cpp  ILoggerManager.h
Engine/SlimenanoEngine/Core/Memory/: IMemoryAllocator.h  IMemoryManager.cpp  IMemoryManager.h
Engine/SlimenanoEngine/Core/Module/: IBaseModule.h  IModule.h  ModuleDependenciesTree.cpp  ModuleDependenciesTree.h
Engine/SlimenanoEngine/Core/Reflection/: Reflections.h
Engine/SlimenanoEngine/Core/Resource/: IResourceBase.h  IResourceManager.cpp  IResourceManager.h  Path.h
Engine/SlimenanoEngine/Gameplay/: CMakeLists.txt  Export.h  LibMain.cpp
Engine/SlimenanoEngine/Renderer/: CMakeLists.txt  Export.h  LibMain.cpp
Engine/SlimenanoEngine/Scripting/: CMakeLists.txt  Export.h  LibMain.cpp
Libraries/: CMakeLists.txt
Libraries/glad/: CMakeLists.txt
Libraries/glad/debug/include/glad/: egl.h  gl.h
Libraries/glad/debug/src/: egl.c  gl.c
Libraries/glad/egl/: CMakeLists.txt
Libraries/glad/egl/include/glad/: egl.h
Libraries/glad/glx/: CMakeLists.txt
Libraries/glad/glx/include/glad/: glx.h
Libraries/glad/include/glad/: gl.h
Libraries/glad/release/include/glad/: egl.h  gl.h
Libraries/glad/release/src/: gl.c
Libraries/glad/wgl/: CMakeLists.txt
Libraries/glad/wgl/include/glad/: wgl.h
Platform/: CMakeLists.txt
Reflection/: CMakeLists.txt
Runtime/: CMakeLists.txt
Runtime/SlimenanoEngine/: SlimenanoEngine.h
Runtime/SlimenanoEngine/Common/Core/: CMakeLists.txt  Export.h
Runtime/SlimenanoEngine/Common/Core/Log/: SPDLogger.cpp  SPDLogger.h  SPDLoggerManager.cpp  SPDLoggerManager.h
Sandbox/: CMakeLists.txt  SandBox.cpp  SandBoxApplication.cpp  SandBoxApplication.h  SandBoxLogger.cpp  SandBoxLogger.h  SandBoxLoggerManager.cpp  SandBoxLoggerManager.h
SlimenanoMemoryManager/: CMakeLists.txt
SlimenanoMemoryManager/src/slimenano/memory/: IMemoryManager.hpp
SlimenanoObject/: CMakeLists.txt
SlimenanoObject/src/slimenano/gc/: GCHandle.hpp  GCObject.cpp  GCObject.hpp  GarbageCollectorManager.cpp  GarbageCollectorManager.hpp  IGarbageCollector.hpp  main.cpp
SlimenanoObject/src/slimenano/gc/mem/: IGCAllocator.hpp
SlimenanoObject/src/slimenano/object/: IGarbageCollector.hpp  Object.cpp  Object.hpp
SlimenanoPlugins/: CMakeLists.txt
docs/: 01.md
